--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by https://www.gitignore.io/api/windows,macos,linux,c,python,c++,sublimetext,virtualenv
 
+config.json
+
 ### Windows ###
 # Windows image file caches
 Thumbs.db
